Corrected icon vertical alignment

--- a/TestStack.BDDfy/Reporters/Html/Scripts/classic.css
+++ b/TestStack.BDDfy/Reporters/Html/Scripts/classic.css
@@ -119,7 +119,6 @@ h3 {
 }
 
     .resultSummary li:before {
-        float: left;
         padding-right: 5px;
     }
 
